--- a/js/package.json
+++ b/js/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "google-protobuf": "^3.11.4",
+    "grpc-web": "^1.0.7",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -17,6 +19,7 @@
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "vue-template-compiler": "^2.6.11"
